--- a/Emotion_detection.ipynb
+++ b/Emotion_detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Emotion_detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvffI+jHXZerhFJkZb1OYo",
+      "authorship_tag": "ABX9TyPM6neCKLe+sbhPClRh6yuY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In this notebook, I have trained A Neural Net with Bi-diretional LSTM on emotion-detection data,  classifying text into love, sadness, fear, etc. I then scraped some tweets from twitter to test my model and got pretty good predictions."
+        "In this notebook, I have trained A Neural Net with Bi-directional LSTM on emotion-detection data,  classifying text into love, sadness, fear, etc. I then scraped some tweets from twitter to test my model and got pretty good predictions."
       ]
     },
     {
