--- a/Emotion_detection.ipynb
+++ b/Emotion_detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Emotion_detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrO08d9UXNKIpB0y4Vdtq2",
+      "authorship_tag": "ABX9TyNQl6WpYZ45fQW9Z1is//MI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,14 +43,21 @@
       },
       "source": [
         "\n",
-        "1.Analysing the text.\n",
-        "2. Removing Stopwords. \n",
-        "3. lemmatization.\n",
-        "4.Converting it to dataframe.\n",
-        "5. Tokeniztion and converting it to a numvector\n",
-        "6. Training the model.\n",
-        "7. Scraping tweets from two accounts with twitter_scraper.\n",
-        "8. Predicting sentiment of tweets with the trained model.\n"
+        "A. Analysing the text.\n",
+        "\n",
+        "B. Removing Stopwords. \n",
+        "\n",
+        "C. lemmatization.\n",
+        "\n",
+        "D.Converting it to dataframe.\n",
+        "\n",
+        "E. Tokeniztion and converting it to a numvector\n",
+        "\n",
+        "F. Training the model.\n",
+        "\n",
+        "G. Scraping tweets from two accounts with twitter_scraper.\n",
+        "\n",
+        "H. Predicting sentiment of tweets with the trained model.\n"
       ]
     },
     {
