--- a/Emotion_detection.ipynb
+++ b/Emotion_detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Emotion_detection.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQl6WpYZ45fQW9Z1is//MI",
+      "authorship_tag": "ABX9TyNsPHCOTYfmmjfQmgAYZ/NO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
         "\n",
         "#read data\n",
         "train_data = open(\"train.txt\", \"r\")\n",
-        "\n"
+        "val_data = open(\"val.txt\", \"r\")\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -920,8 +920,7 @@
         "dic = {'joy':0, 'anger': 1, 'love':2, 'fear':3, 'surprise':4, 'sadness' :5}\n",
         "\n",
         "labels_list_to_num = [dic.get(n, n) for n in labels_list]\n",
-        "labels_list_to_num_val = [dic.get(n, n) for n in labels_val_list]\n",
-        "print(labels_list_to_num_val[:10])\n",
+        "\n",
         "labels_list_to_num[:10]"
       ],
       "execution_count": 0,
@@ -1007,7 +1006,8 @@
         "#our main model.\n",
         "model = Sequential()\n",
         "model.add(Embedding(vocab_size+1, embedding_dim, input_length=30))\n",
-        "model.add(Bidirectional(LSTM(64)))\n",
+        "model.add(Bidirectional(LSTM(120, return_sequences= True)))\n",
+        "model.add(Bidirectional(LSTM(120)))\n",
         "model.add(Dense(32, activation='relu'))\n",
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(6, activation='softmax'))\n",
@@ -1094,8 +1094,7 @@
         "#One hot encoding the vectors to fit in the model.\n",
         "from keras.utils.np_utils import to_categorical   \n",
         "\n",
-        "categorical_labels = to_categorical(np.array(labels_list_to_num), num_classes=6)\n",
-        "categorical_labels_val = to_categorical(np.array(labels_list_to_num_val), num_classes=6)"
+        "categorical_labels = to_categorical(np.array(labels_list_to_num), num_classes=6)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1122,8 +1121,8 @@
         }
       },
       "source": [
-        "#train\n",
-        "history = model.fit(train_padded, categorical_labels, epochs=15)"
+        "#train \n",
+        "history = model.fit(train_padded, categorical_labels,validation_data = (val_padded, categorical_labels_val) epochs=15)"
       ],
       "execution_count": 0,
       "outputs": [
